--- a/client/main.css
+++ b/client/main.css
@@ -1,19 +1,41 @@
-div.app span.logo {
+div.app .header span.logo {
   text-transform: uppercase; }
-  div.app span.logo.active, div.app span.logo:hover {
+  div.app .header span.logo.active, div.app .header span.logo:hover {
     text-transform: uppercase; }
-div.app ul.header-nav {
+div.app .header ul.header-nav {
   list-style: none; }
-  div.app ul.header-nav li {
+  div.app .header ul.header-nav li {
     display: inline-block; }
-    div.app ul.header-nav li .nav-item {
+    div.app .header ul.header-nav li .nav-item {
       color: #fff;
       font-size: 20px;
       text-decoration: none;
       padding: 10px 20px 37px 20px;
       cursor: pointer; }
-      div.app ul.header-nav li .nav-item.active, div.app ul.header-nav li .nav-item:hover {
+      div.app .header ul.header-nav li .nav-item.active, div.app .header ul.header-nav li .nav-item:hover {
         color: #880E4F;
         background: #fff; }
+div.app footer.footer {
+  background: #880E4F;
+  padding: 75px 0; }
+  div.app footer.footer ul.footer-nav {
+    list-style: none;
+    padding-left: 0; }
+    div.app footer.footer ul.footer-nav li {
+      display: inline-block;
+      margin-right: 18px; }
+      div.app footer.footer ul.footer-nav li:after {
+        content: '';
+        display: inline-block;
+        width: 20px;
+        height: 10px; }
+      div.app footer.footer ul.footer-nav li:last-child:after {
+        content: '';
+        display: none;
+        margin-right: 0; }
+      div.app footer.footer ul.footer-nav li a {
+        cursor: pointer;
+        color: #fff;
+        font-size: 14px; }
 
 /*# sourceMappingURL=main.css.map */
