Implementation of the payment by card through the Internet has been started

--- a/client/main.scss
+++ b/client/main.scss
@@ -39,6 +39,10 @@ div.app {
 		}
 	}
 
+	.product-list {
+		padding-top: 100px;
+	}
+
 	footer.footer {
 		background: $pink900;
 		padding: 75px 0;
