--- a/client/main.scss
+++ b/client/main.scss
@@ -28,7 +28,7 @@ div.app {
 					color: $white;
 					font-size: 20px;
 					text-decoration: none;
-					padding: 10px 20px 25px 20px;
+					padding: 10px 20px 37px 20px;
 					cursor: pointer;
 					&.active, &:hover {
 						color: $pink900;
@@ -44,7 +44,7 @@ div.app {
 	}
 
 	footer.footer {
-		font-family: 'Frijole', cursive;
+		font-family: 'Georgia', serif;
 		background: $pink900;
 		padding: 75px 0;
 
