--- a/client/main.scss
+++ b/client/main.scss
@@ -44,7 +44,7 @@ div.app {
 	}
 
 	footer.footer {
-		font-family: 'Georgia', serif;
+		font-family: 'Open Sans', sans-serif;
 		background: $pink900;
 		padding: 75px 0;
 
